Test was not caring the line separator